# SummaryLLM

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ACTIONS_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CITATIONS_IMPLEMENTATION_SUMMARY.md  COMMIT_MSG_NLP_LEMMATIZATION.txt  CONTRIBUTING.md  DEPLOYMENT.md  HIERARCHICAL_ORCHESTRATION_SUMMARY.md  LICENSE  RANKING_IMPLEMENTATION_SUMMARY.md  README.md  SENDER_FIX_SUMMARY.md  quick-install.sh  test.txt
digest-core/: .cursorrules  .env.example  .gitignore  CONFIGURATION.md  Makefile  QUICK_START.md  README.md  RUN_INSTRUCTIONS.md  pyproject.toml
digest-core/configs/: config.example.yaml
digest-core/docker/: Dockerfile
digest-core/docs/: ARCH.md  BRD.md  Bus_Req_v5.md  CITATIONS.md  HIERARCHICAL_ORCHESTRATION.md  RANKING.md  TECH.md  Tech_details_v1.md
digest-core/examples/: digest-2024-01-15.json  digest-2024-01-15.md
digest-core/prompts/: extract_actions.en.v1.j2  extract_actions.v1.j2  summarize.v1.j2  summarize.v2.j2  thread_summarize.v1.j2
digest-core/scripts/: build.sh  collect_diagnostics.sh  deploy.sh  doctor.sh  fix_installation.sh  install.sh  install_interactive.sh  lint.sh  load-config.py  load-config.sh  print_env.sh  py.sh  quick-install.sh  rotate_state.sh  run-local.sh  run.sh  setup-env.sh  setup.sh  smoke.sh  test-connection.sh  test.sh  test_run.sh
digest-core/tests/: mock_llm_gateway.py  test_actions.py  test_actions_sender_integration.py  test_adaptive_budget.py  test_balanced_selection.py  test_citations.py  test_cli.py  test_config.py  test_email_cleaner.py  test_empty_day.py  (+37 more)
(+109 files in other folders)
