[project]
name = "digest-core"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "pydantic-settings>=2.4",
  "pydantic>=2.7",
  "structlog>=24.1",
  "httpx>=0.27",
  "exchangelib>=5.3.6",
  "tenacity>=9.0",
  "prometheus-client>=0.20",
  "beautifulsoup4>=4.12",
  "pytz>=2023.3",
  "pyyaml>=6.0",
]

[tool.ruff]
line-length = 100
